add GetCategoryList interface
